<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.nishachar.anand.weather.home.HomeActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/weatherCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp"
        android:alpha="0"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:visibility="gone"
        app:cardCornerRadius="24dp"
        app:cardElevation="16dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/weatherLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_gradient_list"
            android:paddingBottom="20dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="20dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/cityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="London" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/appbar_padding_top"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cityText"
                tools:text="February 23, 10:32 AM" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/temperatureText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="@+id/weatherImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/weatherImage"
                tools:text="26°C" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/weatherImage"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateText"
                tools:src="@drawable/ic_wb_sunny" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/statusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="@+id/weatherImage"
                app:layout_constraintTop_toBottomOf="@+id/weatherImage"
                tools:text="sunny" />

            <View
                android:id="@+id/dividerOne"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statusText" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/windSpeedLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/wind_speed"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerOne" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/windSpeedSemiColonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semi_colon"
                android:textColor="@android:color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/windSpeedLabelText"
                app:layout_constraintStart_toStartOf="@id/windDegreeSemiColonText" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/windSpeedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/windSpeedSemiColonText"
                app:layout_constraintStart_toStartOf="@+id/windDegreeText"
                tools:text="13 km/h" />

            <View
                android:id="@+id/dividerTwo"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/windSpeedLabelText" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/windDegreeLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/wind_degree"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerTwo" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/windDegreeSemiColonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/semi_colon"
                android:textColor="@android:color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/windDegreeLabelText"
                app:layout_constraintStart_toEndOf="@id/windDegreeLabelText" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/windDegreeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textColor="@android:color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/windDegreeSemiColonText"
                app:layout_constraintStart_toEndOf="@id/windDegreeSemiColonText"
                tools:text="23°C" />

            <View
                android:id="@+id/dividerThree"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/windDegreeLabelText" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/humidityLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/humidity"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerThree" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/humiditySemiColonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semi_colon"
                android:textColor="@android:color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/humidityLabelText"
                app:layout_constraintStart_toStartOf="@id/windDegreeSemiColonText" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/humidityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/humiditySemiColonText"
                app:layout_constraintStart_toStartOf="@+id/windDegreeText"
                tools:text="75%" />

            <View
                android:id="@+id/dividerFour"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/humidityLabelText" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/cloudLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/cloud"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerFour" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/cloudSemiColonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semi_colon"
                android:textColor="@android:color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/cloudLabelText"
                app:layout_constraintStart_toStartOf="@id/windDegreeSemiColonText" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/cloudText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/cloudSemiColonText"
                app:layout_constraintStart_toStartOf="@+id/windDegreeText"
                tools:text="no cloud" />

            <View
                android:id="@+id/dividerFive"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cloudLabelText" />

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>


</FrameLayout>